fix: fixed alignment of artist page header items

--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@
 
     --main-grad: linear-gradient(90deg, var(--green-3) 0%, var(--green-0) 100%);
     --filter-bar: linear-gradient(to right, var(--white-4) 25%, var(--green-0) 20%, var(--white-4) 60%);
-
+    --artist-image: clamp(6rem, 15vw, 12rem)
 }
 
 
@@ -340,7 +340,8 @@ h2 {
     &.band-name {
         filter: var(--shadow-dark-0);
         max-width: fit-content;
-        align-items: center;
+        font-size: clamp(2rem, 7vw, 4rem);
+        text-wrap: nowrap;
     }
 }
 
@@ -533,6 +534,32 @@ a {
     @media (max-width: 550px) {
         padding: 0.8rem;
     }
+}
+.artist-wrapper::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  --webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  z-index: -2;
+}
+
+.first-album::before {
+  content: '';
+  position: absolute;
+  top: -10rem;
+  left: 0;
+  right: 0.7rem;
+  bottom: 0;
+  height: 100px;
+  background-size: 20%;
+  opacity: 50%;
 }
 
 .linkback {
@@ -1085,10 +1112,8 @@ input {
         /*@starting-style{*/
         /*    transform: scale(2);*/
         /*}*/
-        min-width: 12rem;
-        max-width: 12rem;
-        min-height: 12rem;
-        max-height: 12rem;
+        min-width: var(--artist-image);
+        min-height: var(--artist-image);
     }
 
     & .pic--sm {
@@ -1416,6 +1441,11 @@ input {
         align-self: center;
         align-items: center;
     }
+}
+
+.pill-created {
+    padding: .1rem .8rem;
+    font-size: clamp(1rem, 2vw, 3rem);
 }
 
 .pills {
